# orchestrator-core

./: .env.example  .gitignore  README.md  pyproject.toml
.github-org-readme/profile/: README.md
.github/workflows/: orchestrator.yml  seps-child-orchestrate.yml  seps-execute-task.yml
config/: child_repos.json  ci_triggers.json  steering.md
orchestrator/: README.md
scripts/: dispatch_downstream.sh  publish_org_profile.sh  pull_org_repos.sh
src/seps/: bootstrap.py  child_self_run.workflow.yml  ci_triggers.py  config.py  execute_task.py  gh_cli.py  github_client.py  graph.py  issue_memory.py  llm.py  main.py  marketplace.py  plan_parse.py  state.py  steering_context.py
tests/: test_issue_parse.py  test_plan_parse.py
