[project]
name = "seps-orchestrator"
version = "0.1.0"
description = "SEPS: Self-Evolving Protocol Swarm orchestrator for GitHub + Solana"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.0",
  "pydantic-settings>=2.0.0",
]

[project.scripts]
seps = "seps.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seps"]

[tool.uv]
dev-dependencies = [
  "ruff>=0.8.0",
]
